# ConanQtOSGDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  fontconfig_conanfile.py
src/: ConanQTOSGDemo.cpp  PointFactory.cpp  PointFactory.h
src/models/: QPointCloudModel.cpp  QPointCloudModel.h
src/utils/: ConversionsOSGQT.h  EigenUtils.h  PickableGeode.cpp  PickableGeode.h  QOSGWidget.cpp  QOSGWidget.h  QPickHandler.cpp  QPickHandler.h
src/views/: QAbstractOSGView.cpp  QAbstractOSGView.h  QPointCloudView.cpp  QPointCloudView.h
src/widgets/: MainWindow.cpp  MainWindow.h  PointFactoryControl.cpp  PointFactoryControl.h
ui/: MainWindow.ui  PointFactoryControl.ui
